--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sundata/php-utilities",
     "type": "library",
     "description": "Common php utilities library",
-    "keywords": ["sundata","php","utilities","common","library],
+    "keywords": ["sundata","php","utilities","common","library"],
     "homepage": "https://www.sundata.nl",
     "license": "MIT",
     "authors": [
@@ -10,6 +10,6 @@
             "name": "Maarten de Rie",
             "email": "maarten.de.rie@sundata.nl"
         }
-    ],
+    ]
 }
 
