--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,21 @@
 {
-    "name": "sundata/php-utilities",
-    "type": "library",
-    "description": "Common php utilities library",
-    "keywords": ["sundata","php","utilities","common","library"],
-    "homepage": "https://www.sundata.nl",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Maarten de Rie",
-            "email": "maarten.de.rie@sundata.nl"
-        }
-    ]
+  "name": "sundata/php-utilities",
+  "type": "library",
+  "description": "Common php utilities library",
+  "keywords": [
+    "sundata",
+    "php",
+    "utilities",
+    "common",
+    "library"
+  ],
+  "homepage": "https://www.sundata.nl",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Maarten de Rie",
+      "email": "maarten.de.rie@sundata.nl"
+    }
+  ]
 }
 
