--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   ],
   "require": {
-    "php" : "^7.2.3",
+    "php": "^7.2|^8.0",
     "nesbot/carbon": "^2.0"
   },
   "require-dev": {
