--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "nesbot/carbon": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0|^8.0"
+    "phpunit/phpunit": "^7.0|^8.0",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
