--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
-    "nesbot/carbon": "^2.0"
+    "php": "^8.1",
+    "nesbot/carbon": "^2.64|^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0|^8.0",
