--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
     "nesbot/carbon": "^2.64|^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0|^8.0",
-    "ext-json": "*"
+    "phpunit/phpunit": "^7.0|>=8.5.23",
+    "ext-json": "*",
+    "larapack/dd": "^1.1"
   },
   "autoload": {
     "psr-4": {
