--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: [ '7.4', '8.0','8.1','8.2','8.3' ]
+        php-versions: [ '7.4','8.0','8.1','8.2','8.3' ]
+        dependency-versions: [ "lowest","highest" ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -16,17 +17,10 @@ jobs:
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-      - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v2
         with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
+          dependency-versions: ${{ matrix.dependency-versions }}
       - name: Run phpunit
         run: ./vendor/bin/phpunit
   test_success:
