--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": "^7.4|^8.0",
-    "nesbot/carbon": "^2.0"
+    "nesbot/carbon": ">=2.64 || ^3"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0|^8.0",
